--- a/index.html
+++ b/index.html
@@ -4,19 +4,86 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="Assets/Styling/style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-light bg-dark">
+      <span class="navbar-text h2"> Covid Blows </span>
+    </nav>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Welcome to our app</h1>
+        <p class="lead">Some current information is:</p>
+      </div>
+    </div>
+    <!-- Buttons -->
+    <div class="container">
+        <div class = "row">
+            <h3>Select your options here</h3>
+        </div>
+    
+
+    <!-- Graph 1 -->
+    <div class="container">
+      <div class="row">
+        <h2>Graph One Header</h2>
+      </div>
+      <div class="row">
+      <div class="col-md-8">Graph goes here</div>
+      <div class="col-md-4">
+        <h3>Graph one comments</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ex sed
+          ipsa? Harum, nobis praesentium ipsum optio doloribus iure consectetur
+          magni, dicta suscipit reprehenderit, perspiciatis voluptas laboriosam
+          aut deleniti eum.
+        </p>
+      </div>
+    </div>
+    </div>
+
+
+    <!-- Graph 2 -->
+    <div class="container">
+        <div class="row">
+          <h2>Graph 2 Header</h2>
+        </div>
+        <div class="row">
+        <div class="col-md-8">Graph 2 goes here</div>
+        <div class="col-md-4">
+          <h3>Graph two comments</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ex sed
+            ipsa? Harum, nobis praesentium ipsum optio doloribus iure consectetur
+            magni, dicta suscipit reprehenderit, perspiciatis voluptas laboriosam
+            aut deleniti eum.
+          </p>
+        </div>
+      </div>
+      </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script src="" async defer></script>
+  </body>
 </html>
