--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="container">
         <div class = "row">
             <h3>Select your options here</h3>
+            <p>test</p>
         </div>
     
 
