--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Covid vs Stocks</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -20,9 +20,11 @@
   </head>
 
   <body>
+      <!-- NavBar -->
     <nav class="navbar navbar-light bg-dark">
       <span class="navbar-text h2"> Covid Blows </span>
     </nav>
+    <!-- JumboTron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Welcome to our app</h1>
@@ -45,9 +47,9 @@
                   <option>Closing</option>
                 </select>
               </div>
-              <div class="col-auto">
+              <div class="col-auto" id="stockInput">
                 <label class="sr-only" for="inlineFormInputGroup"
-                  >Username</label
+                  >Stock Icon</label
                 >
                 <div class="input-group mb-2">
                   <input
@@ -60,12 +62,13 @@
               </div>
               <div class="col-auto">
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>30 Days</option>
-                  <option>90 Days</option>
-                  <option>120 Days</option>
+                  <option>1 Month</option>
+                  <option>3 Month</option>
+                  <option>6 Month</option>
+                  <option>1 year</option>
                 </select>
               </div>
-              <div class="col-auto">
+              <div class="col-auto" id="buttonBlock">
                 <button type="submit" class="btn btn-primary mb-2">
                   Search
                 </button>
@@ -77,7 +80,7 @@
     </div>
 
     <!-- Graph 1 -->
-    <div class="container">
+    <div class="container graphBlock" id="graphOneContainer">
       <div class="row">
         <h2>Graph One Header</h2>
       </div>
@@ -96,7 +99,7 @@
     </div>
 
     <!-- Graph 2 -->
-    <div class="container">
+    <div class="container graphBlock" id="graphTwoContainer">
       <div class="row">
         <h2>Graph 2 Header</h2>
       </div>
@@ -128,6 +131,7 @@
         </div>
       </div>
     </footer>
+    <!-- script links -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
