--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <form>
             <div class="form-row align-items-center">
               <div class="col-auto">
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="stockPoint">
                   <option>Open</option>
                   <option>High</option>
                   <option>Closing</option>
@@ -61,14 +61,14 @@
                 </div>
               </div>
               <div class="col-auto">
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="stockTime">
                   <option>1 Month</option>
                   <option>3 Month</option>
                   <option>6 Month</option>
                   <option>1 year</option>
                 </select>
               </div>
-              <div class="col-auto" id="buttonBlock">
+              <div class="col-auto" id="stockSubmitBtn">
                 <button type="submit" class="btn btn-primary mb-2">
                   Search
                 </button>
@@ -132,19 +132,12 @@
         </div>
       </div>
     </footer>
-<<<<<<< HEAD
     <!-- script links -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
-=======
-    
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
->>>>>>> d5b7c862ee7d9e21e98b91134acfc2b15ae0b880
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
