pushing JS code for IEX API

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </select>
               </div>
               <div class="col-auto" id="buttonBlock">
-                <button type="submit" class="btn btn-primary mb-2">
+                <button type="submit" class="btn btn-primary mb-2 submit">
                   Search
                 </button>
               </div>
