--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-      <!-- NavBar -->
+    <!-- NavBar -->
     <nav class="navbar navbar-light bg-dark">
       <span class="navbar-text h2"> Covid Blows </span>
     </nav>
@@ -119,7 +119,6 @@
 
     <!-- Footer -->
 
-
     <footer class="footer">
       <div class="row">
         <div class="col-sm-6">
@@ -134,8 +133,8 @@
     </footer>
     <!-- script links -->
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
