--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-      <!-- NavBar -->
+    <!-- NavBar -->
     <nav class="navbar navbar-light bg-dark">
       <span class="navbar-text h2"> Covid Blows </span>
     </nav>
@@ -48,7 +48,7 @@
                 </select>
               </div>
               <div class="col-auto" id="stockInput">
-                <label class="sr-only" for="inlineFormInputGroup"
+                <label class="sr-only user-stock" for="inlineFormInputGroup"
                   >Stock Icon</label
                 >
                 <div class="input-group mb-2">
@@ -62,14 +62,14 @@
               </div>
               <div class="col-auto">
                 <select class="form-control" id="stockTime">
-                  <option>1 Month</option>
+                  <option>1m</option>
                   <option>3 Month</option>
                   <option>6 Month</option>
                   <option>1 year</option>
                 </select>
               </div>
               <div class="col-auto" id="stockSubmitBtn">
-                <button type="submit" class="btn btn-primary mb-2">
+                <button type="submit" class="btn btn-primary mb-2 stock-submit">
                   Search
                 </button>
               </div>
@@ -119,7 +119,6 @@
 
     <!-- Footer -->
 
-
     <footer class="footer">
       <div class="row">
         <div class="col-sm-6">
@@ -134,10 +133,11 @@
     </footer>
     <!-- script links -->
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"
+  ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
