--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-      <!-- NavBar -->
+    <!-- NavBar -->
     <nav class="navbar navbar-light bg-dark">
       <span class="navbar-text h2"> Covid Blows </span>
     </nav>
@@ -47,24 +47,11 @@
                   <option>Closing</option>
                 </select>
               </div>
-              <div class="col-auto" id="stockInput">
-                <label class="sr-only" for="inlineFormInputGroup"
-                  >Stock Icon</label
-                >
-                <div class="input-group mb-2">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="inlineFormInputGroup"
-                    placeholder="Stock Icon"
-                  />
-                </div>
+              <div class="form-group">
+                <input type="email" class="form-control" id="stockInput" placeholder="name@example.com">
               </div>
               <div class="col-auto">
-
-
                 <select class="form-control" id="stockTime">
-
                   <option>1 Month</option>
                   <option>3 Month</option>
                   <option>6 Month</option>
@@ -122,7 +109,6 @@
 
     <!-- Footer -->
 
-
     <footer class="footer">
       <div class="row">
         <div class="col-sm-6">
@@ -137,7 +123,12 @@
     </footer>
 
     <!-- script links -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
