Validating the user range input and changing  to meet API requirements

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <option>1 Month</option>
                   <option>3 Month</option>
                   <option>6 Month</option>
-                  <option>1 year</option>
+                  <option>1 Year</option>
                 </select>
               </div>
               <div class="col-auto" id="stockSubmitBtn">
