created displayGraph() and created <canvas> to append graph to

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <h2>Graph One Header</h2>
       </div>
       <div class="row">
-        <div class="col-md-8">Graph goes here</div>
+        <div class="col-md-8">
+          <canvas id="ctx">graph goes here</canvas>
+        </div>
         <div class="col-md-4">
           <h3>Graph one comments</h3>
           <p>
@@ -140,6 +142,10 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+
+    <!-- chart.js link -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+
     <!-- linked stript -->
     <script src="./script.js"></script>
   </body>
