updated displayGraph() to take in parameter chartNumber

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <canvas id="ctx">graph goes here</canvas>
+          <canvas id="ctxOne">graph 1 goes here</canvas>
         </div>
         <div class="col-md-4">
           <h3>Graph one comments</h3>
@@ -102,7 +102,9 @@
         <h2>Stock Prices Over Time</h2>
       </div>
       <div class="row">
-        <div class="col-md-8">Graph 2 goes here</div>
+        <div class="col-md-8">
+          <canvas id="ctxTwo">graph 2 goes here</canvas>
+        </div>
         <div class="col-md-4">
           <h3>Graph two comments</h3>
           <p>
