--- a/index.html
+++ b/index.html
@@ -28,13 +28,26 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Welcome to our application</h1>
-        <p class="lead">We are here to help you see the correlation between a chosen stock and Covid case rates.</p>
-        <ul><p>How to Use:</p>
-        <li>Choose your stock recording point</li>
-        <li>Enter the stock symbol. IE Coca-Cola is KO. You can search for a list <a href="https://www.marketwatch.com/tools/quotes/lookup.asp" target="_blank" class="marketwatch">here</a>. </li>
-        <li>Select your time frame</li>
-        <li>Submit and observe</li>
-      </ul>
+        <p class="lead">
+          We are here to help you see the correlation between a chosen stock and
+          Covid case rates.
+        </p>
+        <ul>
+          <p>How to Use:</p>
+          <li>Choose your stock recording point</li>
+          <li>
+            Enter the stock symbol. IE Coca-Cola is KO. You can search for a
+            list
+            <a
+              href="https://www.marketwatch.com/tools/quotes/lookup.asp"
+              target="_blank"
+              class="marketwatch"
+              >here</a
+            >.
+          </li>
+          <li>Select your time frame</li>
+          <li>Submit and observe</li>
+        </ul>
       </div>
     </div>
     <!-- Buttons -->
@@ -47,17 +60,30 @@
           <form>
             <div class="form-row align-items-center">
               <div class="col-auto">
-                <select class="form-control" id="stockPoint" placeholder="Stock Point">
+                <select
+                  class="form-control"
+                  id="stockPoint"
+                  placeholder="Stock Point"
+                >
                   <option>Open</option>
                   <option>High</option>
                   <option>Closing</option>
                 </select>
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" id="stockInput" placeholder="Stock ID">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="stockInput"
+                  placeholder="Stock ID"
+                />
               </div>
               <div class="col-auto">
-                <select class="form-control" id="stockTime" placeholder="Period">
+                <select
+                  class="form-control"
+                  id="stockTime"
+                  placeholder="Period"
+                >
                   <option>1 Month</option>
                   <option>3 Month</option>
                   <option>6 Month</option>
@@ -123,7 +149,60 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="row">
-            <p class="disclaimer">disclaimer</p>
+            <!-- Button trigger modal -->
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#exampleModal"
+            >
+              Disclaimer
+            </button>
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="disclaimerModal"
+              tabindex="-1"
+              aria-labelledby="disclaimer"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="disclaimerModal">
+                      Disclaimer
+                    </h5>
+                    <button
+                      type="button"
+                      class="close"
+                      data-dismiss="modal"
+                      aria-label="Close"
+                    >
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>
+                      This application is strictly for the use of observing
+                      stock and Covid data. This should not be considered
+                      financial advice. The responsibility and liability of any
+                      financial decision made after viewing this data rest on
+                      the application user.
+                    </p>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-dismiss="modal"
+                    >
+                      UnderStood
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-sm-6 copyright">
@@ -136,14 +215,12 @@
 
     <!-- minified jquery link -->
     <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"
-  ></script>
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
 
-  
     <!-- bootstrap link -->
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
