--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
     <!-- chart.js link -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
+    <!-- moment.js link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+
     <!-- linked stript -->
     <script src="./script.js"></script>
   </body>
