fixing Title for dynamic chart headers

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- Graph 1 -->
     <div class="container graphBlock" id="graphOneContainer">
       <div class="row">
-        <h2 class="chartHeader">Covid Cases Over Time</h2>
+        <h2 class="chartHeader" id="covidChartHead">Covid Cases Over Time</h2>
       </div>
       <div class="row">
         <div class="col-md-8">
