improved y axes and tooltip labeling

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <canvas id="ctxOne">graph 1 goes here</canvas>
+          <canvas id="ctxOne" width="400" height="200">graph 1 goes here</canvas>
         </div>
         <div class="col-md-4">
           <h3>Covid Graph Metrics</h3>
@@ -131,7 +131,7 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <canvas id="ctxTwo">graph 2 goes here</canvas>
+          <canvas id="ctxTwo" width="400" height="200">graph 2 goes here</canvas>
         </div>
         <div class="col-md-4">
           <h3 id="stockChartComments">Stock Chart Metrics</h3>
