--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </select>
               </div>
               <div class="col-auto" id="stockSubmitBtn">
-                <button type="submit" class="btn btn-primary mb-2 stock-submit">
+                <button type="submit" class="btn mb-2 stock-submit">
                   Search
                 </button>
               </div>
@@ -155,7 +155,7 @@
             <!-- Button trigger modal -->
             <button
               type="button"
-              class="btn btn-primary"
+              class="btn"
               data-toggle="modal"
               data-target="#staticBackdrop"
             >
@@ -195,7 +195,7 @@
                   <div class="modal-footer">
                     <button
                       type="button"
-                      class="btn btn-secondary"
+                      class="btn"
                       data-dismiss="modal"
                     >
                       UnderStood
