modified hero text

--- a/index.html
+++ b/index.html
@@ -32,25 +32,23 @@
     <!-- JumboTron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Welcome to Our Application</h1>
+        <h1 class="display-4">Welcome to Covid Cost Data Analysis</h1>
         <p class="lead">
-          We are here to help you see the correlation between a chosen stock and
-          Covid case rates.
+          Our goal is to illustrate the correlation between Covid 19 rates and stock market prices
         </p>
         <h3>How to Use:</h3>
         <ul>
-          <li>Choose your stock recording point</li>
+          <li>Choose stock recording point</li>
           <li>
-            Enter the stock symbol, i.g. Coca-Cola is KO. You can search for a
-            list
+            Enter stock symbol; you can search companies
             <a
               href="https://www.marketwatch.com/tools/quotes/lookup.asp"
               target="_blank"
               class="marketwatch"
               >here</a
-            >.
+            >
           </li>
-          <li>Select your time frame</li>
+          <li>Select time frame</li>
           <li>Submit and observe</li>
         </ul>
       </div>
@@ -154,15 +152,15 @@
       &#169; Copyright 2020 Our Team</p>
       <!-- Button trigger modal -->
       <!-- Button trigger modal -->
-      <button
-      type="button"
-      class="btn"
-      data-toggle="modal"
-      data-target="#staticBackdrop"
-      id="disclaimer-btn"
-      >
-        Disclaimer
-      </button>
+        <button
+        type="button"
+        class="btn"
+        data-toggle="modal"
+        data-target="#staticBackdrop"
+        id="disclaimer-btn"
+        >
+          Disclaimer
+        </button>
 
       <!-- Modal -->
       <div
