--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <canvas id="ctxOne" width="400" height="200">graph 1 goes here</canvas>
         </div>
         <div class="col-md-4">
-          <h3>Covid Graph Metrics</h3>
+          <h3>Covid Chart Metrics</h3>
           <ul>
             <li id="covidMax">Max Value:</li>
             <li id="covidMin">Min Value:</li>
@@ -149,7 +149,7 @@
     <footer class="footer">  
       <p id="copyright"> 
         <img src="./Images/statistics.png" alt="Covid Cost Logo">
-      &#169; Copyright 2020 Our Team</p>
+      &#169; Copyright 2020 Fuzzy Enigma</p>
       <!-- Button trigger modal -->
       <!-- Button trigger modal -->
         <button
